=== release 0.9.1 ===

2005-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* README:
	* RELEASE:
	* configure.ac:
	* autogen.sh:
	  releasing 0.9.1, "Angel Eyes"

2005-09-05  Jan Schmidt  <thaytan@mad.scientist.com>
	* examples/gstplay/player.c: (main):
	* examples/stats/mp2ogg.c: (main):
	* ext/artsd/gstartsdsink.c: (gst_artsdsink_change_state):
	* ext/audiofile/gstafsink.c: (gst_afsink_change_state):
	* ext/audiofile/gstafsrc.c: (gst_afsrc_change_state):
	* ext/cdaudio/gstcdaudio.c: (gst_cdaudio_change_state):
	* ext/dirac/gstdiracdec.cc:
	* ext/directfb/directfbvideosink.c:
	(gst_directfbvideosink_change_state):
	* ext/dts/gstdtsdec.c: (gst_dtsdec_change_state):
	* ext/faac/gstfaac.c: (gst_faac_change_state):
	* ext/hermes/gsthermescolorspace.c:
	(gst_hermes_colorspace_change_state):
	* ext/ivorbis/vorbisfile.c: (gst_ivorbisfile_change_state):
	* ext/jack/gstjack.c: (gst_jack_change_state):
	* ext/jack/gstjackbin.c: (gst_jack_bin_change_state):
	* ext/lcs/gstcolorspace.c: (gst_colorspace_change_state):
	* ext/libmms/gstmms.c: (gst_mms_change_state):
	* ext/mpeg2enc/gstmpeg2enc.cc:
	* ext/mplex/gstmplex.cc:
	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_change_state):
	* ext/musicbrainz/gsttrm.c: (gst_musicbrainz_change_state):
	* ext/nas/nassink.c: (gst_nassink_change_state):
	* ext/polyp/polypsink.c: (gst_polypsink_change_state),
	(context_state_callback), (gst_polypsink_link):
	* ext/sdl/sdlvideosink.c: (gst_sdlvideosink_change_state):
	* ext/shout/gstshout.c: (gst_icecastsend_change_state):
	* ext/smoothwave/gstsmoothwave.c: (gst_sw_change_state):
	* ext/sndfile/gstsf.c: (gst_sf_change_state):
	* ext/swfdec/gstswfdec.c: (gst_swfdec_change_state):
	* ext/tarkin/gsttarkindec.c: (gst_tarkindec_change_state):
	* ext/xine/xine.c: (gst_xine_change_state):
	* ext/xine/xineaudiodec.c: (gst_xine_audio_dec_change_state):
	* ext/xine/xineaudiosink.c: (gst_xine_audio_sink_change_state):
	* ext/xine/xineinput.c: (gst_xine_input_change_state):