@@ -8,10 +8,10 @@ libgstspeed_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstspeed.h
 
-if HAVE_GTK
-noinst_PROGRAMS = demo-mp3
-endif
+#if HAVE_GTK
+#noinst_PROGRAMS = demo-mp3
+#endif
 
-demo_mp3_SOURCES = demo-mp3.c
-demo_mp3_CFLAGS  = $(GTK_CFLAGS) $(GST_CFLAGS) 
-demo_mp3_LDFLAGS = $(GST_LIBS) $(GTK_LIBS)
+#demo_mp3_SOURCES = demo-mp3.c
+#demo_mp3_CFLAGS  = $(GTK_CFLAGS) $(GST_CFLAGS) 
+#demo_mp3_LDFLAGS = $(GST_LIBS) $(GTK_LIBS)
